# clip-flow

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts
.claude/: settings.json
.claude/agents/: code-reviewer.md  code-simplifier.md  error-log-analyzer.md  test-code-creator.md  test-generator.md  test-healer.md  test-planner.md  test-scenario-writer.md
.claude/commands/: bump.md  commit.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
.serena/: project.yml
docs/: CNAME  index.html
e2e/: home.spec.ts  models.spec.ts  settings.spec.ts  transcription.spec.ts
landing/: index.html
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: cloud.rs  directory.rs  ffmpeg.rs  mod.rs  models.rs  ollama.rs  transcribe.rs
src-tauri/src/services/: claude.rs  directory_service.rs  download.rs  ffmpeg.rs  keychain.rs  mod.rs  ollama.rs  openai.rs  whisper.rs
src/context/: MediaContext.test.tsx  MediaContext.tsx  QueueContext.test.tsx  QueueContext.tsx  SettingsContext.test.tsx  SettingsContext.tsx  ThemeContext.test.tsx  ThemeContext.tsx  index.ts
src/hooks/: index.ts  useAppVersion.test.tsx  useAppVersion.ts  useAutoSummarize.test.tsx  useAutoSummarize.ts  useAutoTranscribe.test.tsx  useAutoUpdate.ts  (+4 more)
(+77 files in other folders)
