[package]
name = "clip-flow"
version = "0.1.3"
description = "Media transcription and summarization app"
authors = ["you"]
edition = "2021"

[lib]
name = "clip_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP client for API calls and downloads
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }

# Error handling
thiserror = "2"
anyhow = "1"

# File and path utilities
dirs = "6"
uuid = { version = "1", features = ["v4"] }
which = "7"

# Logging
log = "0.4"
env_logger = "0.11"

# Progress tracking
indicatif = "0.17"

# Secure API key storage
keyring = "3"

# File watching
notify = "7"
notify-debouncer-mini = "0.5"

# Directory walking
walkdir = "2"

# Zip extraction
zip = "2"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
